# OS-lab1new

./: CMakeLists.txt
results/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
tests/: test1_baseline.sh  test2_find_optimal_n.sh  test3_multithread.sh  test4_compiler_opt.sh  test5_io_multiproc.sh
vtsh/: compile.sh  cpu-factorize-mt.c  cpu-factorize.c  ema-replace-int.c  myshell.c
